--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 <meta property="twitter:description" content="內文Happy birthday!!!">
 <meta property="twitter:image" content="https://i.imgur.com/K0o4L1r.jpg"> -->
 
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@nytimesbits" />
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:site" content="@nytimesbits" />
 <meta name="twitter:creator" content="@caiyike1" />
-<meta property="og:url" content="https://albert-1031.github.io/card3/index" />
-<meta property="og:title" content="A Twitter for My Sister" />
-<meta property="og:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
-<meta property="og:image" content="https://i.imgur.com/K0o4L1r.jpg">
+<meta property="twitter:title" content="A Twitter for My Sister" />
+<meta property="twitter:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
+<meta property="twitter:image" content="https://i.imgur.com/K0o4L1r.jpg">
 <body>
     <div class="test">
 
