--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <!-- 
 <meta property="twitter:card" content="summary">
 <meta property="twitter:site" content="網站名稱">
-<meta property="twitter:creator" content="@caiyike1">!--要貼上的twitter帳戶的id--
+<meta property="twitter:creator" content="@caiyike1"><!--要貼上的twitter帳戶的id-->
 <meta property="twitter:title" content="標題例IKE生日企劃">
 <meta property="twitter:description" content="內文Happy birthday!!!">
-<meta property="twitter:image" content="https://i.imgur.com/K0o4L1r.jpg"> -->
+<meta property="twitter:image" content="https://i.imgur.com/7s7M8nn.jpg"> -->
 
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:site" content="@nytimesbits" />
+<meta property="twitter:site" content="網站名稱" />
 <meta name="twitter:creator" content="@caiyike1" />
-<meta property="twitter:title" content="A Twitter for My Sister" />
-<meta property="twitter:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
-<meta property="twitter:image" content="https://i.imgur.com/K0o4L1r.jpg">
+<meta property="twitter:title" content="標題例IKE生日" />
+<meta property="twitter:description" content="內文Happy birthday!!!" />
+<meta property="twitter:image" content="https://i.imgur.com/7s7M8nn.jpg">
 <body>
     <div class="test">
 
