--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <meta property="twitter:creator" content="@caiyike1">要貼上的twitter帳戶的id
 <meta property="twitter:title" content="標題例IKE生日企劃">
 <meta property="twitter:description" content="內文Happy birthday!!!">
-<meta property="twitter:image" content="https://i.imgur.com/7s7M8nn.jpg"> -->
+<meta property="twitter:image" content="https://i.imgur.com/eqkyykj.jpg"> -->
 
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:site" content="網站名稱" />
 <meta name="twitter:creator" content="@caiyike1" />
 <meta property="twitter:title" content="標題例IKE生日" />
 <meta property="twitter:description" content="內文Happy birthday!!!" />
-<meta property="twitter:image" content="https://i.imgur.com/7s7M8nn.jpg">
+<meta property="twitter:image" content="https://i.imgur.com/eqkyykj.jpg">
 <body>
     <div class="test">
 
