--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
-<!-- 
+
 <meta property="twitter:card" content="summary">
-<meta property="twitter:site" content="網站名稱">
-<meta property="twitter:creator" content="@caiyike1">要貼上的twitter帳戶的id
-<meta property="twitter:title" content="標題例IKE生日企劃">
-<meta property="twitter:description" content="內文Happy birthday!!!">
-<meta property="twitter:image" content="https://i.imgur.com/eqkyykj.jpg"> -->
+<meta property="twitter:site" content="@quilldren_tw">
+<meta property="twitter:title" content="Birthday presents for Ike Eveland! —Quilldren's Diary">
+<meta property="twitter:description" content="Welcome to Quilldren's Diary, a special birthday present we prepared for Ike Eveland. Sincerely invite you to this journey with us, to more beautiful memories.">
+<meta property="twitter:image" content="https://media.discordapp.net/attachments/951684087708549140/978869278499553330/d9cf5e4732738bff.png">
 
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:site" content="網站名稱" />
-<meta name="twitter:creator" content="@caiyike1" />
-<meta property="twitter:title" content="標題例IKE生日" />
-<meta property="twitter:description" content="內文Happy birthday!!!" />
-<meta property="twitter:image" content="https://i.imgur.com/eqkyykj.jpg">
+
+<meta property="og:card" content="summary">
+<meta property="og:card" content="summary_large_image" />
+<meta property="og:site" content="fb網站名稱" />
+
+<meta property="og:title" content="Birthday presents for Ike Eveland! —Quilldren's Diary" />
+<meta property="og:description" content="Welcome to Quilldren's Diary, a special birthday present we prepared for Ike Eveland. Sincerely invite you to this journey with us, to more beautiful memories." />
+<meta property="og:image" content="https://media.discordapp.net/attachments/951684087708549140/978869278499553330/d9cf5e4732738bff.png">
 <body>
     <div class="test">
 
@@ -26,4 +28,3 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, officiis! Ipsum, sed provident. Maiores nobis at earum commodi illo, praesentium sit reprehenderit dolorem unde error rerum officiis incidunt. Vitae, quis?</p>
     </div>
 </body>
-</html>
